update bucket links

--- a/sm_dist_training/cifar10-sagemaker-distributed.ipynb
+++ b/sm_dist_training/cifar10-sagemaker-distributed.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "sagemaker_session = sagemaker.Session()\n",
     "role = sagemaker.get_execution_role()\n",
-    "bucket_name = 'tfworld2019'"
+    "bucket_name = 'tf-booth-bucket'"
    ]
   },
   {
